# ICAO-emissions

./: README.md  edb-emissions-databank v27-NewFormat (web).xlsx  pyproject.toml
