[tool.poetry]
name = "icao-emissions"
version = "0.1.0"
description = ""
authors = ["Jules Chéron <jules.cheron@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pint = "^0.15"
pandas = "^1.1.1"
jupyter = "^1.0.0"
xlrd = "^1.2.0"
plotly = "^4.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
